# gRPC-L1Payments

./: Cargo.toml
proto/: payments.proto
src/: clientL1.rs  serverL1.rs
